# biquaternion_py

./: .coverage  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  coverage.xml  pre-commit.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
biquat_py/: __init__.py  biquaternion.py  poly_tools.py  polynomials.py  random_gen.py
biquaternion_py/: __init__.py  biquat_tools.py  biquaternion.py  lines.py  poly_tools.py  polynomials.py  random_gen.py
docs/: biquat_py.md  biquat_py.rst  modules.md  modules.rst
docs/source/: Usage.md  biquaternion_py.rst  conf.py  index.md  modules.rst
docs/source/ipynb_notebooks/: Pitfalls.ipynb  Tutorial.ipynb
docs/source/ipynb_notebooks/.ipynb_checkpoints/: Tutorial-checkpoint.ipynb
tests/: test_biquat_sym.py  test_biquat_tools.py  test_lines.py  test_poly_fact.py  test_polynomials.py
