[project]
name = "biquaternion_py"
version = "1.0.0"
authors = [
    {name = "Daren Thimm", email = "daren.thimm@uibk.ac.at"},
]
maintainers = [
    {name = "Daren Thimm", email = "daren.thimm@uibk.ac.at"},
]
description = "Sympy compatible implementation of general biquaternion algebras."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
        "numpy>=1.24.3",
        "sympy>=1.12"
]
license = {"file"= "LICENSE"}

[tool.setuptools]
packages = ["biquaternion_py"]


[build-system]
requires = [
"setuptools==67.7.0",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
doc = [
    "sphinx ~= 7.1.0",
    "myst-parser",
    "sphinx-rtd-theme",
    "nbsphinx",
    "numpydoc"
]
dev = [
    "flake8 == 6.0.0",
    "pytest == 7.2.0",
    "pre-commit == 3.3.3",
    "tox == 3.27.0"
]

[project.urls]
Documentation = "http://biquaternion-py.readthedocs.io/"
Source  = "https://git.uibk.ac.at/geometrie-vermessung/biquaternion_py"
